Changed ID attributes names for nav bar

--- a/src/apps/copo_landing_page/templates/nav_public.html
+++ b/src/apps/copo_landing_page/templates/nav_public.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="frontpage-nav" class="navbar navbar-default navbar-fixed-left" role="navigation">
+<nav id="frontpageNav" class="navbar navbar-default navbar-fixed-left" role="navigation">
     <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand"
@@ -18,7 +18,7 @@
             </div>
         {% endif %}
 
-        <!-- <div id="frontpage-navbar-inner" class="collapse navbar-collapse"> -->
+        <!-- <div id="frontpageNavbarInner" class="collapse navbar-collapse"> -->
         <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
             <li role="presentation"><a href="/" target="_parent">Home</a></li>
             <li class="dropdown">
