--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -54,7 +54,7 @@ body {
   background-color: white !important;
 }
 
-#frontpage-navbar-inner.navbar-collapse.in  {
+#frontpageNavbarInner.navbar-collapse.in {
   background-color: #f7f6f6;
 }
 
