--- a/static/assets/css/navbar.css
+++ b/static/assets/css/navbar.css
@@ -4,8 +4,8 @@
   text-shadow: none !important;
 }
 
-#copo-global-nav .navbar-nav > li > a i,
-#copo-global-nav .navbar-nav > li > a i {
+#copoGlobalNav .navbar-nav > li > a i,
+#copoGlobalNav .navbar-nav > li > a i {
   cursor: pointer;
 }
 
@@ -17,7 +17,7 @@
   padding: 5px 0px 0px 0px;
 }
 
-#copo-global-nav {
+#copoGlobalNav {
   background-color: rgba(255, 255, 255, 0.95) !important;
   height: 55px;
   min-height: 10px;
@@ -27,163 +27,163 @@
   border-bottom-width: thin;
 }
 
-#copo-global-nav .navbar-nav > li + li {
+#copoGlobalNav .navbar-nav > li + li {
   margin-left: 5px;
 }
 
-#copo-global-nav .navbar-nav .dropdown-menu > li + li {
+#copoGlobalNav .navbar-nav .dropdown-menu > li + li {
   margin-top: 5px;
 }
 
-#copo-global-nav .navbar-nav > li > a .caret {
+#copoGlobalNav .navbar-nav > li > a .caret {
   margin-left: 5px;
 }
 
-#copo-global-nav .navbar-nav > li.dropdown:last-child {
+#copoGlobalNav .navbar-nav > li.dropdown:last-child {
   margin-right: 10px;
 }
 
-#copo-global-nav .navbar-brand {
+#copoGlobalNav .navbar-brand {
   color: rgba(119, 119, 119, 1);
 }
 
-#copo-global-nav .navbar-nav > li > a {
+#copoGlobalNav .navbar-nav > li > a {
   color: black;
   background: transparent;
   height: 50px !important;
 }
 
-#copo-global-nav .navbar-nav > .active > a i,
-#copo-global-nav .navbar-nav > li > a i:hover,
-#copo-global-nav .navbar-nav > li > a i:focus,
-#copo-global-nav .navbar-nav > .active > a i:hover,
-#copo-global-nav .navbar-nav > .active > a i:focus {
+#copoGlobalNav .navbar-nav > .active > a i,
+#copoGlobalNav .navbar-nav > li > a i:hover,
+#copoGlobalNav .navbar-nav > li > a i:focus,
+#copoGlobalNav .navbar-nav > .active > a i:hover,
+#copoGlobalNav .navbar-nav > .active > a i:focus {
   color: white;
   background-color: black;
 }
 
-#copo-global-nav .navbar-nav > li > a i {
+#copoGlobalNav .navbar-nav > li > a i {
   font-size: 16px;
 }
 
-#copo-global-nav .navbar-nav > li > a i:hover,
-#copo-global-nav .navbar-nav > li > a i:focus,
-#copo-global-nav .navbar-nav > .active > a i:hover,
-#copo-global-nav .navbar-nav > .active > a i:focus,
-#copo-global-nav .navbar-nav > .active > a i {
+#copoGlobalNav .navbar-nav > li > a i:hover,
+#copoGlobalNav .navbar-nav > li > a i:focus,
+#copoGlobalNav .navbar-nav > .active > a i:hover,
+#copoGlobalNav .navbar-nav > .active > a i:focus,
+#copoGlobalNav .navbar-nav > .active > a i {
   border-radius: 50%;
   padding: 4px;
   display: inline-block;
 }
 
-#copo-global-nav .navbar-nav .dropdown-menu li > a:hover,
-#copo-global-nav .navbar-nav.dropdown-menu li > a:focus,
-#copo-global-nav .navbar-nav.dropdown-submenu:hover > a {
+#copoGlobalNav .navbar-nav .dropdown-menu li > a:hover,
+#copoGlobalNav .navbar-nav.dropdown-menu li > a:focus,
+#copoGlobalNav .navbar-nav.dropdown-submenu:hover > a {
   background-image: none;
   background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
 }
 
-#copo-global-nav .navbar-toggle {
+#copoGlobalNav .navbar-toggle {
   border-color: black;
 }
 
-#copo-global-nav .navbar-toggle:hover,
-#copo-global-nav .navbar-toggle:focus {
+#copoGlobalNav .navbar-toggle:hover,
+#copoGlobalNav .navbar-toggle:focus {
   background-color: black;
 }
 
-#copo-global-nav .navbar-toggle:hover .icon-bar,
-#copo-global-nav .navbar-toggle:focus .icon-bar {
+#copoGlobalNav .navbar-toggle:hover .icon-bar,
+#copoGlobalNav .navbar-toggle:focus .icon-bar {
   background-color: white;
 }
 
-#copo-global-nav .navbar-toggle .icon-bar {
+#copoGlobalNav .navbar-toggle .icon-bar {
   background-color: black;
 }
 
-#copo-global-nav .dropdown-menu {
+#copoGlobalNav .dropdown-menu {
   background-color: white !important;
 }
 
-#copo-global-nav .dropdown-menu > li > a:focus,
-#copo-global-nav .dropdown-menu > li > a:hover {
+#copoGlobalNav .dropdown-menu > li > a:focus,
+#copoGlobalNav .dropdown-menu > li > a:hover {
   background-color: black !important;
   text-decoration: none;
   color: white !important;
 }
 
-#copo-global-nav .dropdown-menu > li > a {
+#copoGlobalNav .dropdown-menu > li > a {
   font-weight: bold;
   color: black !important;
 }
 
 /* Authenticated top navigation bar - Inverse top navigation bar */
-#copo-global-nav .navbar-inverse .dropdown-menu {
+#copoGlobalNav .navbar-inverse .dropdown-menu {
   background-color: #101010 !important;
 }
 
-#copo-global-nav .navbar-inverse .dropdown-menu > li > a:focus,
-#copo-global-nav .navbar-inverse .dropdown-menu > li > a:hover {
+#copoGlobalNav .navbar-inverse .dropdown-menu > li > a:focus,
+#copoGlobalNav .navbar-inverse .dropdown-menu > li > a:hover {
   background-color: #d9d9d9 !important;
   text-decoration: none;
   color: #0a0a0a !important;
 }
 
-#copo-global-nav .navbar-inverse .dropdown-menu > li > a {
+#copoGlobalNav .navbar-inverse .dropdown-menu > li > a {
   font-weight: bold;
   color: white !important;
   font-size: 14px !important;
 }
 
-#copo-global-nav .navbar-inverse .navbar-brand {
+#copoGlobalNav .navbar-inverse .navbar-brand {
   color: rgba(119, 119, 119, 1);
 }
 
-#copo-global-nav .navbar-inverse {
+#copoGlobalNav .navbar-inverse {
   background: transparent;
   border-bottom-color: rgba(38, 38, 38, 0.95);
   border-bottom-width: thin;
 }
 
-#copo-global-nav .navbar-inverse .navbar-nav > li > a {
+#copoGlobalNav .navbar-inverse .navbar-nav > li > a {
   color: black;
   background: transparent;
   height: 50px !important;
 }
 
-#copo-global-nav .navbar-inverse .navbar-nav > li > a:hover,
-#copo-global-nav .navbar-inverse .navbar-nav > li > a:focus {
+#copoGlobalNav .navbar-inverse .navbar-nav > li > a:hover,
+#copoGlobalNav .navbar-inverse .navbar-nav > li > a:focus {
   color: #d1b37f;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-#copo-global-nav .navbar-inverse .navbar-nav > .active > a,
-#copo-global-nav .navbar-inverse .navbar-nav > .active > a:hover,
-#copo-global-nav .navbar-inverse .navbar-nav > .active > a:focus {
+#copoGlobalNav .navbar-inverse .navbar-nav > .active > a,
+#copoGlobalNav .navbar-inverse .navbar-nav > .active > a:hover,
+#copoGlobalNav .navbar-inverse .navbar-nav > .active > a:focus {
   color: rgba(85, 85, 85, 1);
   background-color: transparent;
 }
 
-#copo-global-nav .navbar-inverse .navbar-nav .dropdown-menu li > a:hover,
-#copo-global-nav .navbar-inverse .navbar-nav .dropdown-menu li > a:focus,
-#copo-global-nav .navbar-inverse .navbar-nav .dropdown-submenu:hover > a {
+#copoGlobalNav .navbar-inverse .navbar-nav .dropdown-menu li > a:hover,
+#copoGlobalNav .navbar-inverse .navbar-nav .dropdown-menu li > a:focus,
+#copoGlobalNav .navbar-inverse .navbar-nav .dropdown-submenu:hover > a {
   background-image: none;
   background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
 }
 
-#copo-global-nav .navbar-inverse .navbar-toggle:hover,
-#copo-global-nav .navbar-inverse .navbar-toggle:focus,
-#copo-global-nav .navbar-inverse .navbar-toggle:hover .icon-bar,
-#copo-global-nav .navbar-inverse .navbar-toggle:focus .icon-bar,
-#copo-global-nav .navbar-inverse .navbar-toggle .icon-bar {
+#copoGlobalNav .navbar-inverse .navbar-toggle:hover,
+#copoGlobalNav .navbar-inverse .navbar-toggle:focus,
+#copoGlobalNav .navbar-inverse .navbar-toggle:hover .icon-bar,
+#copoGlobalNav .navbar-inverse .navbar-toggle:focus .icon-bar,
+#copoGlobalNav .navbar-inverse .navbar-toggle .icon-bar {
   background-color: transparent;
 }
 /* End authenticated top navigation bar */
 
 /* Public top navigation bar */
-#frontpage-nav {
+#frontpageNav {
   height: 59px;
   min-height: 10px;
   max-height: 180px;
@@ -191,22 +191,22 @@
   border-bottom-width: thin !important;
 }
 
-#frontpage-nav .navbar-nav > li > a:hover,
-#frontpage-nav .navbar-nav > .active > a,
-#frontpage-nav .navbar-nav > .active > a:hover,
-#frontpage-nav .navbar-nav > .active > a:focus {
+#frontpageNav .navbar-nav > li > a:hover,
+#frontpageNav .navbar-nav > .active > a,
+#frontpageNav .navbar-nav > .active > a:hover,
+#frontpageNav .navbar-nav > .active > a:focus {
   background-color: #080808 !important;
   color: #ffffff !important;
 }
 
-#frontpage-nav .nav {
+#frontpageNav .nav {
   padding-right: 45px;
   font-size: 8px;
   float: right !important;
   padding-left: 20px;
 }
 
-#frontpage-nav .nav li a {
+#frontpageNav .nav li a {
   background-color: transparent !important;
   color: black !important;
   font-size: 2em;
@@ -214,27 +214,27 @@
   margin: 15px 15px 0 5px; /*10px 5px 0 5px;*/
 }
 
-#frontpage-nav .navbar-nav > li > a {
+#frontpageNav .navbar-nav > li > a {
   padding-top: 5px !important;
   padding-bottom: 5px !important;
   line-height: 20px !important;
 }
 
-#frontpage-nav .dropdown-menu {
+#frontpageNav .dropdown-menu {
   padding: 5px 0 !important;
   min-width: 160px !important;
   text-align: right;
   background-color: white !important;
 }
 
-#frontpage-nav .dropdown-menu > li > a:focus,
-#frontpage-nav .dropdown-menu > li > a:hover {
+#frontpageNav .dropdown-menu > li > a:focus,
+#frontpageNav .dropdown-menu > li > a:hover {
   background-color: black !important;
   text-decoration: none;
   color: white !important;
 }
 
-#frontpage-nav .dropdown-menu > li > a {
+#frontpageNav .dropdown-menu > li > a {
   font-weight: bold;
   color: black !important;
   font-size: 14px !important;
@@ -242,25 +242,25 @@
 }
 
 /* Public top navigation bar - Inverse top navigation bar */
-#frontpage-nav .navbar-inverse .dropdown-menu {
+#frontpageNav .navbar-inverse .dropdown-menu {
   background-color: #101010 !important;
 }
 
-#frontpage-nav .navbar-inverse .dropdown-menu > li > a:focus,
-#frontpage-nav .navbar-inverse .dropdown-menu > li > a:hover {
+#frontpageNav .navbar-inverse .dropdown-menu > li > a:focus,
+#frontpageNav .navbar-inverse .dropdown-menu > li > a:hover {
   background-color: #d9d9d9 !important;
   text-decoration: none;
   color: #0a0a0a !important;
 }
 
-#frontpage-nav .navbar-inverse .dropdown-menu > li > a {
+#frontpageNav .navbar-inverse .dropdown-menu > li > a {
   font-weight: bold;
   color: white !important;
   font-size: 14px !important;
   text-align: left;
 }
 
-#frontpage-nav .navbar-inverse .nav li a {
+#frontpageNav .navbar-inverse .nav li a {
   background-color: transparent !important;
   color: white !important;
   font-size: 2em;
@@ -268,14 +268,14 @@
   margin: 15px 15px 0 5px; /*10px 5px 0 5px;*/
 }
 
-#frontpage-nav .navbar-inverse .navbar-nav > .active > a,
-#frontpage-nav .navbar-inverse .navbar-nav > .active > a:hover,
-#frontpage-nav .navbar-inverse .navbar-nav > .active > a:focus {
+#frontpageNav .navbar-inverse .navbar-nav > .active > a,
+#frontpageNav .navbar-inverse .navbar-nav > .active > a:hover,
+#frontpageNav .navbar-inverse .navbar-nav > .active > a:focus {
   background-color: #ffffff !important;
   color: #080808 !important;
 }
 
-#frontpage-nav .navbar-inverse .navbar-nav > li > a:hover {
+#frontpageNav .navbar-inverse .navbar-nav > li > a:hover {
   background-color: #eaf0f0 !important;
   color: #080808 !important;
 }
