--- a/src/apps/copo_core/templates/copo/nav_authenticated.html
+++ b/src/apps/copo_core/templates/copo/nav_authenticated.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="copo-global-nav" class="navbar navbar-default">
+<nav id="copoGlobalNav" class="navbar navbar-default">
     <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% if user.is_authenticated %} {% url 'copo_profile_index:index' %} {% else %}/{% endif %}">
