--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="frontpage-navbar-outer" class="navbar navbar-default navbar-fixed-left {% if banner %}has-margin-top-neg-12{% endif %}" role="navigation">
+<nav id="frontpageNavbarOuter" class="navbar navbar-default navbar-fixed-left {% if banner %}has-margin-top-neg-12{% endif %}" role="navigation">
     <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand"
@@ -24,7 +24,7 @@
             </div>
         {% endif %}
 
-        <div id="frontpage-navbar-inner" class="collapse navbar-collapse">
+        <div id="frontpageNavbarInner" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li role="presentation"><a href="/" target="_parent">Home</a></li>
                 <li class="dropdown">
