--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -5,10 +5,6 @@
 
 {% block stylesheet_block %}
 <style>
-    body {
-        background-color: rgba(49, 48, 44, 0.7);
-    }
-
     p {
         color: #1a1c1a;
         font-size: 19px;
@@ -18,7 +14,7 @@
 {% endblock stylesheet_block%}
 
 {% block carouselblock %}
-<div id="myCarousel" class="carousel container slide">
+<div id="aboutCarousel" class="carousel slide">
     <div class="carousel-inner">
         <div class="item one"></div>
         <div class="item two"></div>
@@ -29,16 +25,17 @@
 
 
 {% block header_section %}
+<!--
 <div class="container" id="home">
     <div class="row text-center">
         <div class="col-md-12 col-md-12 col-sm-12">
             <h1 style="height: 300px;">
-                <!-- <img style="margin-top: 50px" class="header-img" src="/static/assets/img/logo8_white_trans.png"
-                    alt="header image"> -->
+                 <img style="margin-top: 50px" class="header-img" src="/static/assets/img/logo8_white_trans.png"
+                    alt="header image"> 
             </h1>
         </div>
     </div>
-</div>
+</div>-->
 {% endblock header_section %}
 
 {% block content %}
