--- a/src/apps/copo_core/templates/copo/copo_profile_types.html
+++ b/src/apps/copo_core/templates/copo/copo_profile_types.html
@@ -48,23 +48,16 @@ const component_def = {
       {% if component.subtitle %}
         subtitle: '{{ component.subtitle }}',
       {% endif %}
-
-      isAssignable: {{ component.is_assignable|yesno:"true,false" }},
-      isParent: {{ component.is_parent|yesno:"true,false" }},
-      schema_name: '{{ component.schema_name }}',
-
-      {% if not component.is_parent %}
+      {% if  component.group_name %}
         groupName: '{{ component.group_name }}',
-        groupTitle: '{{ component.group_title }}',
-        tableID: '{{ component.table_id }}',
-        url: "{% if component.reverse_url and component.schema_name %}{% url component.reverse_url  schema_name=component.schema_name  profile_id='999' ui_component=component.name  %}{% elif component.reverse_url %}{% url component.reverse_url  profile_id='999' ui_component=component.name %}{% endif %}",
       {% endif %}
-
+      schema_name: '{{ component.schema_name }}',
+      tableID: '{{ component.table_id }}',
+      url: "{% if component.reverse_url and component.schema_name %}{% url component.reverse_url  schema_name=component.schema_name  profile_id='999' ui_component=component.name  %}{% elif component.reverse_url %}{% url component.reverse_url  profile_id='999' ui_component=component.name %}{% endif %}",
       semanticIcon: '{{ component.widget_icon }}',
       iconClass: '{{ component.widget_icon_class }}',
       color: '{{ component.widget_colour }}',
       colorClass: '{{ component.widget_colour_class }}',
-    
       buttons: [ {% for button in component.title_buttons.all %} '{{ button.name }}', {% endfor %} ],
       recordActions: [ {% for button in component.recordaction_buttons.all %} '{{ button.name }}', {% endfor %} ],
       sidebarPanels: ['copo-sidebar-info'],
