Set group name in html template

--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -130,7 +130,7 @@
 
      <!-- Button (dropdown menu/group): Images -->
     <div class="profile-dropdown-wrapper images-pcomponent-dropdown-button-template" tabindex="0">
-        <div class="tiny ui button pcomponent-button pcomponent-color bright-coral">
+        <div class="tiny ui button pcomponent-button pcomponent-color bright-coral">Images
             <i class="dropdown icon"></i>
         </div>
         <div class="menu profile-dropdown-menu comp transition" tabindex="-1">
